# morphing

./: README.md
morphing/: CMakeLists.txt  main.cpp  scene.cpp  scene.h
morphing/gl/: shaderProgram.cpp  shaderProgram.h  vertexArrayObject.cpp  vertexArrayObject.h  vertexBufferObject.cpp  vertexBufferObject.h
morphing/scene/: eventManager.cpp  eventManager.h  morphingModel.cpp  morphingModel.h  shape.h  shapeFactory.cpp  shapeFactory.h
morphing/scene/shaders/: main.frag  main.vert
morphing/sdl2/: context.h
